<resources>
    <string name="app_name">Android_SPD111</string>

    <!-- MAIN ACTIVITY -->
    <string name="main_tv_title">Основи Android</string>
    <string name="main_btn_calc">Калькулятор</string>
    <string name="main_btn_game">Свайпи Game</string>
    <string name="main_btn_chat">Мережа Чат</string>
    <string name="main_btn_my_chat">ДЗ_4 Мій Чат</string>
    <string name="main_btn_anim">Анімації</string>

    <!-- region CALC ACTIVITY -->
    <string name="calc_tv_title">Calculator</string>
    <string name="calc_btn_percent">%</string>
    <string name="calc_btn_c">C</string>
    <string name="calc_btn_ce">CE</string>
    <string name="calc_btn_backspace">\u232B</string>
    <string name="calc_btn_inverse">\u00B9/\u2093</string>
    <string name="calc_btn_square">x\u00B2</string>
    <string name="calc_btn_sqrt">\u221Ax</string>
    <string name="calc_btn_divide">/</string>
    <string name="calc_btn_multiply">*</string>
    <string name="calc_btn_minus">\u002D</string>
    <string name="calc_btn_plus">\u002B</string>
    <string name="calc_btn_plus_minus">\u00B1</string>
    <string name="calc_btn_comma">\u002E</string>
    <string name="calc_btn_equal">\u003D</string>
    <string name="calc_btn_0">0</string>
    <string name="calc_btn_1">1</string>
    <string name="calc_btn_2">2</string>
    <string name="calc_btn_3">3</string>
    <string name="calc_btn_4">4</string>
    <string name="calc_btn_5">5</string>
    <string name="calc_btn_6">6</string>
    <string name="calc_btn_7">7</string>
    <string name="calc_btn_8">8</string>
    <string name="calc_btn_9">9</string>


    <!-- CALC ACTIVITY BTN MEMORY-->
    <string name="calc_btn_memory_mc">MC</string>
    <string name="calc_btn_memory_mr">MR</string>
    <string name="calc_btn_memory_ms">MS</string>
    <string name="calc_btn_memory_m_plus">M\u002B</string>
    <string name="calc_btn_memory_m_minus">M\u002D</string>

    <string name="calc_limit_exceeded">Limit exceeded</string>
    <string name="calc_zero_division">Division by zero</string>
    <!-- endregion -->

    <!-- region ANIME ACTIVITY -->
    <string name="anim_title">Анімації</string>
    <string name="anim_opacity_title">Прозорість</string>
    <string name="anim_size_title">Розмір</string>
    <string name="anim_arc_title">Обертання</string>
    <string name="anim_move_title">Переміщення</string>
    <string name="anim_combo_title">Комбінація</string>
    <!-- endregion -->

    <!-- region GAME ACTIVITY -->
    <string name="str_game">GAME</string>
    <!-- endregion -->

    <!-- region CHAT ACTIVITY -->
    <string name="str_chat">CHAT</string>
    <string name="str_my_chat">Chat</string>
    <string name="my_chat_send">Send</string>
    <string name="my_chat_message">Enter message</string>
    <string name="chat_scroller_description">Chat messages</string>
    <!-- endregion -->

</resources>